@@ -44,56 +44,6 @@ table {
   border-spacing: 0;
 }
 
-html {
-  font-size: 16px;
-  font-size: var(--font-size);
-  font-family: -apple-system,
-                 BlinkMacSystemFont,
-                 'Segoe UI',
-                 'Roboto',
-                 'Oxygen',
-                 'Ubuntu',
-                 'Cantarell',
-                 'Fira Sans',
-                 'Droid Sans',
-                 'Helvetica Neue',
-                 sans-serif;
-  font-family: var(--font-family);
-  color: #040404;
-  color: var(--text-color);
-  background-color: #fff;
-  background-color: var(--background-color);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  min-height: 100vh;
-}
-
-@media screen and (-ms-high-contrast: active),(-ms-high-contrast: none) {
-  body {
-    height: 100%;
-  }
-}
-
-*, *::before, *::after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-  background-color: transparent;
-  outline: 0;
-}
-
-hr {
-  margin: 0;
-  border: 0;
-}
-
 :root {
   --font-size: 16px;
   --font-family: var(--sansserif-font-family);
@@ -179,6 +129,56 @@ hr {
   --fuchsia: #f012be;
   --purple: #b10dc9;
   --maroon: #85144b;
+}
+
+html {
+  font-size: 16px;
+  font-size: var(--font-size);
+  font-family: -apple-system,
+                 BlinkMacSystemFont,
+                 'Segoe UI',
+                 'Roboto',
+                 'Oxygen',
+                 'Ubuntu',
+                 'Cantarell',
+                 'Fira Sans',
+                 'Droid Sans',
+                 'Helvetica Neue',
+                 sans-serif;
+  font-family: var(--font-family);
+  color: #040404;
+  color: var(--text-color);
+  background-color: #fff;
+  background-color: var(--background-color);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+}
+
+@media screen and (-ms-high-contrast: active),(-ms-high-contrast: none) {
+  body {
+    height: 100%;
+  }
+}
+
+*, *::before, *::after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  background-color: transparent;
+  outline: 0;
+}
+
+hr {
+  margin: 0;
+  border: 0;
 }
 
 .al {
