@@ -4,12 +4,12 @@
   "version": "0.10.0",
   "author": "lemmon",
   "license": "MIT",
-  "style": "src/index.css",
+  "style": "index.css",
   "dependencies": {
     "reset-css": "^5.0.1"
   },
   "scripts": {
-    "build:css": "abrusco src -o css/abrusco.css",
+    "build:css": "abrusco index.css -o css/abrusco.css",
     "build:minify": "abrusco css/abrusco.css -o css/abrusco.min.css --minify",
     "build": "npm run build:css && npm run build:minify",
     "readme:update": "sed -i ~previous -E 's/@[0-9]+\\.[0-9]+\\.[0-9]+/@'$npm_package_version'/g' README.md",
@@ -17,7 +17,7 @@
     "readme": "npm run readme:update && npm run readme:cleanup",
     "version": "npm run build && npm run readme && git add -A css examples README.md",
     "postversion": "git push && git push --tags && npm publish",
-    "w": "abrusco src -o css/abrusco.css --watch"
+    "w": "abrusco index.css -o css/abrusco.css --watch"
   },
   "browserslist": [
     "ie >= 11",
