@@ -1,15 +1,0 @@
-@import 'reset-css';
-@import '-normalize';
-@import '-variables';
-
-@import '-type';
-@import '-visibility';
-@import '-position';
-@import '-grid';
-@import '-spacing';
-@import '-border';
-@import '-color';
-@import '-background';
-@import '-cursor';
-
-@import '-debug';
